--- a/package.json
+++ b/package.json
@@ -4,43 +4,49 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.7",
-    "@ionic/react": "^5.5.0",
-    "@ionic/react-router": "^5.5.0",
+    "@ionic/react": "^5.6.1",
+    "@ionic/react-router": "^5.6.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router": "^5.1.11",
+    "@testing-library/user-event": "^13.0.2",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.7",
-    "ionicons": "^5.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "customize-cra": "^1.0.0",
+    "ionicons": "^5.5.0",
+    "magiql": "^0.0.9",
+    "react": "^0.0.0-experimental-3fb11eed9",
+    "react-app-rewired": "^2.1.8",
+    "react-dom": "^0.0.0-experimental-3fb11eed9",
+    "react-error-boundary": "^3.1.1",
+    "react-masonry-css": "^1.0.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.2.3",
+    "web-vitals": "^1.1.1",
+    "workbox-background-sync": "^6.1.2",
+    "workbox-broadcast-update": "^6.1.2",
+    "workbox-cacheable-response": "^6.1.2",
+    "workbox-core": "^6.1.2",
+    "workbox-expiration": "^6.1.2",
+    "workbox-google-analytics": "^6.1.2",
+    "workbox-navigation-preload": "^6.1.2",
+    "workbox-precaching": "^6.1.2",
+    "workbox-range-requests": "^6.1.2",
+    "workbox-routing": "^6.1.2",
+    "workbox-strategies": "^6.1.2",
+    "workbox-streams": "^6.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "get-hasura-schema": "cd src/graphql && get-graphql-schema https://takehome.hasura.app/v1/graphql -H \"X-Hasura-Admin-Secret: fVbfdODqZa4B1uxdJ0fgVgt1lwqmKFicjNkSf6ZRviqig4g2h6SbS4mRCjb1mmFx\" --introspect > schema.graphql"
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +67,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.7"
+    "@capacitor/cli": "2.4.7",
+    "@types/styled-components": "^5.1.9"
   },
   "description": "An Ionic project"
 }
