--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
     "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
-    "customize-cra": "^1.0.0",
     "ionicons": "^5.5.0",
-    "magiql": "^0.0.9",
     "react": "^0.0.0-experimental-3fb11eed9",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^0.0.0-experimental-3fb11eed9",
     "react-error-boundary": "^3.1.1",
-    "react-masonry-css": "^1.0.14",
+    "react-relay": "^11.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -46,7 +43,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "get-hasura-schema": "cd src/graphql && get-graphql-schema https://takehome.hasura.app/v1/graphql -H \"X-Hasura-Admin-Secret: fVbfdODqZa4B1uxdJ0fgVgt1lwqmKFicjNkSf6ZRviqig4g2h6SbS4mRCjb1mmFx\" --introspect > schema.graphql"
+    "relay": "relay-compiler --watch",
+    "gq-hasura-schema": "cd src/graphql && gq https://takehome.hasura.app/v1/graphql -H \"X-Hasura-Admin-Secret: fVbfdODqZa4B1uxdJ0fgVgt1lwqmKFicjNkSf6ZRviqig4g2h6SbS4mRCjb1mmFx\" --introspect > schema.graphql"
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +66,18 @@
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
-    "@types/styled-components": "^5.1.9"
+    "@types/react-relay": "^11.0.0",
+    "@types/relay-runtime": "^10.1.10",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-relay": "^11.0.0-rc.0",
+    "customize-cra": "^1.0.0",
+    "graphql": "^15.5.0",
+    "graphql-compiler": "^1.7.0",
+    "react-app-rewired": "^2.1.8",
+    "relay-compiler": "^11.0.0-rc.0",
+    "relay-compiler-language-typescript": "^13.0.6",
+    "relay-compiler-webpack-plugin": "^8.1.0",
+    "relay-config": "^11.0.0"
   },
   "description": "An Ionic project"
 }
