--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "customize-cra": "^1.0.0",
     "graphql": "^15.5.0",
     "graphql-compiler": "^1.7.0",
+    "graphqurl": "^0.3.3",
     "react-app-rewired": "^2.1.8",
     "relay-compiler": "^11.0.0-rc.0",
     "relay-compiler-language-typescript": "^13.0.6",
